# computerClubYadro

./: CMakeLists.txt  README.md
include/Club/: Club.h  Events.h  Utils.h
src/: Club.cpp  Events.cpp  Utils.cpp  main.cpp
tests/: tests.cpp
tests/data/: test1.in  test1.out  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test8.out
tests/data/bad_conf/: bad_cost.in  bad_cost.out  bad_event.in  bad_event.out  bad_tables.in  bad_tables.out  bad_time.in  bad_time.out  bad_time_format.in  bad_time_format.out  disordered_time.in  disordered_time.out  event_bad_client.in  event_bad_client.out  event_bad_table.in  event_bad_table.out  event_bad_time.in  event_bad_time.out  event_bad_type.in  event_bad_type.out  event_disordered_time.in  event_disordered_time.out  event_excessive.in  event_excessive.out  event_not_enough.in  event_not_enough.out  negative_cost.in  negative_tables.in  no_cost.in  no_tables.in  no_time.in  one_time.in  overload_cost.in  overload_tables.in  unreal_time.in  unreal_time.out  zero_cost.in  zero_tables.in
tests/data/empty/: empty.in  empty.out
tests/data/legacy/: test2.in  test2.out  test3.in  test3.out  test4.in  test7.out  test8.in  test9.in  test9.out
tests/data/multiple/: clear_queue.in  clear_queue.out  come_first_sit_second_enqueue.in  come_first_sit_second_enqueue.out  come_kickout.in  come_kickout.out  come_sit_leave.in  come_sit_leave.out  come_sit_same_table.in  come_sit_same_table.out  complex_queue.in  complex_queue.out  from_table_to_queue.in  from_table_to_queue.out  leave_queue.in  leave_queue.out  queue_overload.in  queue_overload.out  queue_reentrance.in  queue_reentrance.out  try_swap.in  try_swap.out  two_sit_third_in_queue_kickout.in  two_sit_third_in_queue_kickout.out
tests/data/single/: ceiling.in  ceiling.out  closed_after.in  closed_after.out  closed_all_events.in  closed_all_events.out  closed_before.in  closed_before.out  come_bad_sit.in  (+27 more)
